--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI="mongodb+srv://Gourangabwn98:GourangA98@cluster0.mkalv.mongodb.net/"
+MONGO_URI=mongodb+srv://Gourangabwn98:GourangA98@cluster0.mkalv.mongodb.net/assignment1
 JWT_SECRET=your_jwt_secret
